Improve MBC1 implementation